<resources>
    <string name="app_name">ProjetoDelivery</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="promocoes">Promoções</string>
    <string name="lanches">Lanches</string>
    <string name="bebidas">Bebidas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cachorrofrango">Cachorro quente de frango</string>
    <string name="cachorrofranfotexto">Cachorro quente de frango delicioso de 40cm e muito sabor apenas R$35,00</string>
    <string name="xfrango">X frango</string>
    <string name="xfrangotext">X Frango delicioso e saboroso prensado apenas R$20,00</string>
    <string name="cachorrobacon">Cachorro quente de bacon</string>
    <string name="cachorrobacontext">Cachorro quente de bacon com muito bacon apenas R$28,00</string>
    <string name="pasteldefrango">Pastel de Frango</string>
    <string name="pasteldefrangotext">Pastel de Frango apenas R$25,00</string>
    <string name="cocacolalitro">Coca-cola 2 litros R$10,00</string>
    <string name="guaranalitro">Guarana Antartica 2 litros R$10,00</string>
</resources>