<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanchesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cachorroFrangoPromo"
                    android:layout_width="150dp"
                    android:layout_height="20dp"
                    android:text="@string/cachorrofrango"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cachorroFrangoPromo2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/cachorrofranfotexto" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/cachorrofrangoImg"
                android:layout_width="50dp"
                android:layout_height="72dp"
                android:src="@drawable/chachorrofrango" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="110dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/xFrangoPromo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xfrango"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/xFrangoPromo2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/xfrangotext" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/imgDogFrang"
                android:layout_width="50dp"
                android:layout_height="72dp"
                android:scaleType="centerCrop"
                android:src="@drawable/xfrango" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>