<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PromocoesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cachorroFrango"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cachorrofrango"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cachorroFrangoText"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/cachorrofranfotexto" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="70dp"
                android:layout_height="72dp"
                android:scaleType="centerCrop"
                android:src="@drawable/pasteldefrango" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/xFrango"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xfrango"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/xFrangoText"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/xfrangotext" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/imgDogFrango"
                android:layout_width="70dp"
                android:layout_height="72dp"
                android:scaleType="centerCrop"
                android:src="@drawable/xfrango" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>