<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imagem1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/dsdsds" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="false"
            android:layout_marginTop="191dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPromocoes"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/promocoes"
                android:textColor="#686868" />

            <Button
                android:id="@+id/btnLanches"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/lanches"
                android:textColor="#686868" />

            <Button
                android:id="@+id/btnBebidas"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/bebidas"
                android:textColor="#686868" />
        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>